tests/ui/parser/doc-before-eof.rs
fn main() {}

/// hi //~ERROR expected item after doc comment

// ferrocene-annotations: fls_q8l2jza7d9xa
// Comments
